Refs #7131 !strict Fixed: reversed brackets and curly braces nulls in complex object tracing caused errors left aligned all toolbar buttons
git-svn-id: http://svn.dojotoolkit.org/src/dojo/trunk@14330 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/_firebug/firebug.css
+++ b/_firebug/firebug.css
@@ -190,6 +190,9 @@
 	margin-right:5px;
 	margin-left:0;
 }
+#firebugToolbar ul.tabs li.gap{
+	margin-left:20px;
+}
 #firebugToolbar .tabs a{
 	text-decoration:none;
 	background:transparent url(tab_rgt_norm.png) no-repeat right;
